# caterpie

devel/: .rosinstall  setup.sh
devel/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  CameraSettings.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndEffectorCommand.h  EndEffectorProperties.h  EndEffectorState.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  JointCommand.h  ListCamerasRequest.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCameraRequest.h  OpenCameraResponse.h  RobustControllerStatus.h  SEAJointState.h  SolvePositionIKRequest.h  SolvePositionIKResponse.h  URDFConfiguration.h
devel/include/baxter_maintenance_msgs/: CalibrateArmData.h  CalibrateArmEnable.h  TareData.h  TareEnable.h  UpdateSource.h  UpdateSources.h  UpdateStatus.h
src/caterpie_descripton/: CMakeLists.txt
src/caterpie_gazebo/: CMakeLists.txt  package.xml
src/catexp/: CMakeLists.txt
src/grid_stair_arena/: CMakeLists.txt  README.md  package.xml
src/grid_stair_arena/launch/: grid_stair_arena.launch  random_objects.launch  random_objects_random_pose.launch  tracked_vehicle_simple.launch
src/grid_stair_arena/world/: grid_stair_arena.world  random_objects.world  random_objects_random_pose.world  stair_test.world  stair_test_new.world  tracked_vehicle_simple.world
src/visual_stack/: CMakeLists.txt  package.xml  stair_detection.py
(+46 files in other folders)
