<?xml version="1.0"?>
<package format="2">
  <name>grid_stair_arena</name>
  <version>0.0.0</version>
  <description>The grid stair climber arena package</description>
  <maintainer email="arnabgudu.gs@gmail.com">Arnab Paikaray</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
